# ZP-projekat

./: .gitignore  README.md  private_keyring.json  public_keyring.json  pyproject.toml
src/pgp_service/: __init__.py  aes.py  entries.py  key_manager.py  private_key_ring.py  public_key_ring.py  rsa_key_gen.py
src/pgp_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
