[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pgp-service"
version = "0.1.0"
description = "PGP service models and utilities"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
